# app/controllers/api/v1/borrowings_controller.rb
@@ -8,55 +8,37 @@ module Api
       after_action :verify_policy_scoped, only: :index
 
       def index
-        @borrowings = policy_scope(Borrowing)
         authorize Borrowing
-        pagy, records = pagy(@borrowings)
-        render_response(data: records, meta: pagy_metadata(pagy))
+        result = RequestEntryPoint::Borrowings::ListBorrowings.call(scope: policy_scope(Borrowing))
+        pagy, records = pagy(result.borrowings)
+        render_response(data: BorrowingBlueprint.render_as_hash(records), meta: pagy_metadata(pagy))
       end
 
       def show
-        @borrowing = Borrowing.find(params[:id])
-        authorize @borrowing
-        render_response(data: @borrowing)
+        authorize borrowing
+        render_response(data: BorrowingBlueprint.render_as_hash(borrowing))
       end
 
       def create
-        @borrowing = current_user.borrowings.build(borrowing_params)
-        authorize @borrowing
-
-        if @borrowing.save
-          render_response(data: @borrowing, status: :created)
-        else
-          render_error(message: @borrowing.errors.full_messages, status: :unprocessable_entity,
-                       code: :unprocessable_entity)
-        end
+        authorize Borrowing
+        result = RequestEntryPoint::Borrowings::CreateBorrowing.call(
+          user: current_user,
+          book_id: borrowing_params[:book_id]
+        )
+        render_response(data: BorrowingBlueprint.render_as_hash(result.borrowing), status: :created)
       end
 
-      def update
-        @borrowing = Borrowing.find(params[:id])
-        authorize @borrowing
-
-        if @borrowing.update(borrowing_params)
-          render_response(data: @borrowing)
-        else
-          render_error(message: @borrowing.errors.full_messages, status: :unprocessable_entity,
-                       code: :unprocessable_entity)
-        end
-      end
-
-      def return_book
-        @borrowing = Borrowing.find(params[:id])
-        authorize @borrowing, :return_book?
-
-        if @borrowing.update(returned_at: Time.current, status: :returned)
-          render_response(data: @borrowing)
-        else
-          render_error(message: @borrowing.errors.full_messages, status: :unprocessable_entity,
-                       code: :unprocessable_entity)
-        end
+      def return_borrowing
+        authorize borrowing, :return?
+        result = RequestEntryPoint::Borrowings::ReturnBorrowing.call(borrowing: borrowing)
+        render_response(data: BorrowingBlueprint.render_as_hash(result.borrowing))
       end
 
       private
+
+      def borrowing
+        @borrowing ||= Borrowing.find(params[:id])
+      end
 
       def borrowing_params
         params.require(:borrowing).permit(:book_id)
