# app/interactors/request_entry_point/borrowings/list_borrowings.rb
@@ -1,0 +1,11 @@
+# frozen_string_literal: true
+
+module RequestEntryPoint
+  module Borrowings
+    class ListBorrowings < BaseService
+      def call
+        context.borrowings = context.scope
+      end
+    end
+  end
+end
