# app/models/errors/borrowings/book_not_available.rb
@@ -1,0 +1,11 @@
+# frozen_string_literal: true
+
+module Errors
+  module Borrowings
+    class BookNotAvailable < Errors::AppErrors::ApplicationError
+      def initialize(msg = 'Book is not available for borrowing')
+        super(msg, status: :unprocessable_entity, code: :book_not_available)
+      end
+    end
+  end
+end
